--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "FESK-Styling",
+  "name": "Dit-Pattern-Styling",
   "version": "1.0.0",
   "description": "",
-  "author": "Onkar Chiroma",
+  "author": "Gerald",
   "private": true,
   "homepage": "",
   "scripts": {
