--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "homepage": "",
   "scripts": {
+    "start": "node index.js",
     "test": "gulp lint:sass",
     "build": "gulp",
     "watch": "gulp watch"
@@ -18,10 +19,15 @@
     "node-sass-import": "^1.1.0",
     "gulp-sass": "2.2.0",
     "gulp-load-plugins": "1.1.0",
-    "gulp": "3.9.0"
+    "gulp": "3.9.0",
+    "express": "^4.9.8"
   },
   "devDependencies": {
     "gulp-sass-lint": "1.1.1",
     "jshint-stylish": "2.1.0"
-  }
+  },
+  "engines": {
+    "node": "4.1.1"
+  },
+  "main": "index.js"
 }
