--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Dit-Pattern-Styling",
   "version": "1.0.0",
-  "description": "",
-  "author": "Gerald",
+  "description": "DIT pattern library styles",
+  "author": "DIT",
   "private": true,
   "homepage": "",
   "scripts": {
