--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gulp-load-plugins": "1.1.0",
     "gulp": "3.9.0",
     "express": "^4.9.8",
-    "jquery": "1.11.2"
+    "jquery": "1.11.2",
+    "selectivizr": "latest"
   },
   "devDependencies": {
     "gulp-sass-lint": "1.1.1",
