--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "",
   "scripts": {
     "start": "node index.js",
+    "develop": "npm run build && npm start & npm run watch",
     "test": "gulp lint:sass",
     "build": "gulp",
     "watch": "gulp watch"
