--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "babel-core": "6.3.26",
     "babel-preset-es2015": "6.3.13",
     "bourbon-neat": "1.8.0",
-    "express": "^4.9.8",
-    "gulp": "3.9.0",
-    "gulp-load-plugins": "1.1.0",
-    "gulp-sass": "2.2.0",
-    "jquery": "1.11.2",
-    "node-sass": "^3.10.1",
+    "node-sass": "4.5.2",
     "node-sass-import": "^1.1.0",
-    "selectivizr": "latest"
+    "gulp-sass": "3.1.0",
+    "gulp-load-plugins": "1.5.0",
+    "gulp": "3.9.1",
+    "express": "^4.15.2",
+    "jquery": "1.11.2"
   },
   "devDependencies": {
-    "gulp-sass-lint": "1.1.1",
-    "jshint-stylish": "2.1.0"
+    "gulp-sass-lint": "1.3.2",
+    "jshint": "2.9.4",
+    "jshint-stylish": "2.2.1"
   },
   "engines": {
-    "node": "5.0.0"
+    "node": "6.10.3"
   },
   "main": "index.js"
 }
