--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "1.11.2",
     "node-sass": "^3.10.1",
     "node-sass-import": "^1.1.0",
+    "prismjs": "^1.6.0",
     "pug": "^2.0.0-rc.1",
     "selectivizr": "latest"
   },
