--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "babel-core": "6.3.26",
     "babel-preset-es2015": "6.3.13",
     "bourbon-neat": "1.8.0",
+    "eslint": "^3.19.0",
     "express": "^4.9.8",
     "gulp": "3.9.0",
     "gulp-load-plugins": "1.1.0",
     "gulp-sass": "2.2.0",
+    "jquery": "^3.2.1",
+    "lazysizes": "^4.0.0-rc1",
     "node-sass": "^3.10.1",
     "node-sass-import": "^1.1.0",
     "prismjs": "^1.6.0",
