--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "homepage": "",
   "scripts": {
     "start": "node index.js",
-    "develop": "npm run build & npm start & npm run watch",
-    "test": "gulp lint:sass",
-    "build": "gulp build",
-    "watch": "gulp watch"
+    "develop": "./node_modules/.bin/gulp & npm start",
+    "test": "./node_modules/.bin/gulp lint:sass",
+    "build": "./node_modules/.bin/gulp build",
+    "watch": "./node_modules/.bin/gulp watch"
   },
   "dependencies": {
     "babel-core": "6.3.26",
