--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -9,4 +9,8 @@ rules:
   'mixins-before-declarations': 0,
   'no-duplicate-properties': 0,
   'no-vendor-prefixes': 0,
-  'single-line-per-selector': 0
+  'single-line-per-selector': 0,
+  'class-name-format':
+    - 0
+    - allow-leading-underscore: true
+      convention: hyphenatedbem
