--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "develop": "./node_modules/.bin/gulp & npm start",
-    "test": "./node_modules/.bin/gulp lint:sass",
+    "test": "./node_modules/.bin/gulp lint",
     "build": "./node_modules/.bin/gulp build",
     "watch": "./node_modules/.bin/gulp watch"
   },
