--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-core": "6.3.26",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-preset-es2015": "6.3.13",
+    "babel-preset-es2017": "^6.24.1",
     "bourbon-neat": "1.8.0",
     "eslint": "^3.19.0",
     "express": "^4.15.2",
