--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "DIT",
   "homepage": "",
   "scripts": {
-    "start": "node index.js",
-    "develop": "./node_modules/.bin/gulp & npm start",
+    "start": "npm run build && npm run start-server",
+    "start-server": "node index.js",
+    "develop": "./node_modules/.bin/gulp & npm run start-server",
     "test": "./node_modules/.bin/gulp lint",
     "build": "./node_modules/.bin/gulp build",
     "watch": "./node_modules/.bin/gulp watch"
@@ -50,7 +51,7 @@
     "webpack": "^2.5.1"
   },
   "engines": {
-    "node": "6.10.3"
+    "node": "6.10.2"
   },
   "main": "index.js"
 }
