--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "develop": "npm run start-server & ./node_modules/.bin/gulp",
     "test": "./node_modules/.bin/gulp lint",
     "build": "./node_modules/.bin/gulp build",
-    "watch": "./node_modules/.bin/gulp watch",
-    "heroku-prebuild": "gulp build"
+    "watch": "./node_modules/.bin/gulp watch"
   },
   "dependencies": {
     "babel-core": "6.3.26",
@@ -19,13 +18,10 @@
     "babel-preset-es2015": "6.3.13",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
-    "bourbon-neat": "1.8.0",
-
+    "bourbon-neat": "^2.0.0",
     "eslint": "^3.19.0",
-
     "express": "^4.15.2",
     "gulp": "3.9.1",
-
     "gulp-load-plugins": "1.5.0",
     "gulp-sass": "3.1.0",
     "jquery": "1.11.2",
