--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "./node_modules/.bin/gulp lint",
     "build": "./node_modules/.bin/gulp build",
     "watch": "./node_modules/.bin/gulp watch",
-    "heroku-prebuild": "gulp build"
+    "heroku-postbuild": "gulp build"
   },
   "dependencies": {
     "babel-core": "6.3.26",
