set NPM_CONFIG_PRODUCTION for review apps

--- a/app.json
+++ b/app.json
@@ -1,7 +1,9 @@
 {
   "name": "dit-pattern-library",
   "scripts": {},
-  "env": {},
+  "env": {
+    "NPM_CONFIG_PRODUCTION": "false"
+  },
   "formation": {},
   "addons": [],
   "buildpacks": [
