--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dit-Pattern-Styling",
+  "name": "great-styles-current",
   "version": "1.0.0",
   "description": "DIT pattern library styles",
   "author": "DIT",
@@ -8,7 +8,8 @@
     "start": "node index.js",
     "test": "gulp lint:sass",
     "build": "gulp",
-    "watch": "gulp watch"
+    "watch": "gulp watch",
+    "postinstall": "gulp"
   },
   "dependencies": {
     "babel-core": "6.3.26",
