--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "Dit-Pattern-Styling",
+  "name": "@uktrade/great-pattern-library",
   "version": "0.2.0",
-  "description": "DIT pattern library styles",
-  "author": "DIT",
-  "homepage": "",
+  "description": "Patern library used across the great.gov.uk websites",
+  "author": "DIT Digital",
+  "homepage": "http://styleguide.uktrade.io/",
   "scripts": {
     "start": "npm run build && npm run start-server",
     "start-server": "node index.js",
