re-add heroku-prebuild script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uktrade/great-pattern-library",
-  "version": "0.2.3",
+  "version": "0.2.2",
   "description": "Patern library used across the great.gov.uk websites",
   "author": "DIT Digital",
   "homepage": "http://styleguide.uktrade.io/",
@@ -10,7 +10,8 @@
     "develop": "npm run start-server & ./node_modules/.bin/gulp",
     "test": "./node_modules/.bin/gulp lint",
     "build": "./node_modules/.bin/gulp build",
-    "watch": "./node_modules/.bin/gulp watch"
+    "watch": "./node_modules/.bin/gulp watch",
+    "heroku-postbuild": "gulp build"
   },
   "dependencies": {
     "babel-core": "6.3.26",
@@ -25,7 +26,6 @@
     "gulp-load-plugins": "1.5.0",
     "gulp-sass": "3.1.0",
     "jquery": "1.11.2",
-    "js-beautify": "^1.6.14",
     "lazysizes": "^4.0.0-rc1",
     "node-sass": "4.5.2",
     "node-sass-import": "^1.1.0",
