--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-load-plugins": "1.5.0",
     "gulp-sass": "3.1.0",
     "jquery": "1.11.2",
+    "js-beautify": "^1.6.14",
     "lazysizes": "^4.0.0-rc1",
     "node-sass": "4.5.2",
     "node-sass-import": "^1.1.0",
