--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "node-sass-import": "^1.1.0",
     "prismjs": "^1.6.0",
     "pug": "^2.0.0-rc.2",
-    "selectivizr": "latest"
+    "selectivizr": "latest",
+    "govuk-elements-sass": "3.0.0",
+    "govuk_frontend_toolkit": "6.0.2"
   },
   "devDependencies": {
     "axe-core": "^2.3.1",
